@@ -96,7 +96,7 @@ if exists("flow_x0")
 	syn match flowCoreVar '\<browser\.\(ancient\|modern\|is_ancient\|is_modern\)\>'
 	syn match flowCoreVar '\<\(userdir.name\|userdir\)\>'
 	syn match flowCoreVar '\<log\.\(level\|file\)\>'
-	syn keyword flowCoreVar max_read_idle max_write_idle max_keepalive_idle max_keepalive_requests max_connections max_files max_address_space max_core_size tcp_cork tcp_nodelay
+	syn keyword flowCoreVar max_read_idle max_write_idle max_keepalive_idle max_keepalive_requests max_connections max_files max_address_space max_core_size tcp_cork tcp_nodelay lingering
 	syn keyword flowCoreVar max_request_uri_size max_request_header_size max_request_header_count max_request_body_size
 	syn keyword flowCoreFunctions header rewrite
 	syn keyword flowCoreFunctions expire
